Замена устаревших методов на современные.